--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -718,6 +718,11 @@ config HTC_BATTCHG_SMEM
 	default n
 	bool "Read Battery Info via SMEM"
 
+config TROUT_WIFI
+	depends on ARCH_MSM
+	default m
+	tristate "Trout Wifi Gpio driver (rfkill)"
+
 config HTC_PWRSINK
 	depends on MSM_SMD
 	default y
